--- a/LOGIN(ISMAEL)/index.html
+++ b/LOGIN(ISMAEL)/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html lang="pt-br">
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Formulario Simples</title>
+    </head>
+    <body>
+        <div class="container">
+            <div class="quadrado1"></div>
+            <div class="quadrado2"></div>
+            <div class="quadrado3"></div>
+            <form action="#">
+                <h1>Login
+                    <p>Seja bem-vindo</p>
+                    <hr>
+                </h1>
+
+                <label for="nome">Nome: </label><br>
+                <input type="text" placeholder="Digite seu nome..." id="nome"
+                    name="nome"><br><br>
+
+                <label for="email">E-mail: </label><br>
+                <input type="email" placeholder="Digite seu email..." id="email"
+                    name="email"><br><br>
+
+                <label for="senha">Senha: </label><br>
+                <input type="password" placeholder="Digite sua senha..."
+                    id="senha"
+                    name="senha"><br><br>
+
+                <button id="button" onclick="audio.play();" class="btn"> Olá
+                </button>
+
+            </form>
+        </div>
+        <script type="text/javascript">
+            const audio = new Audio();
+            audio.src = "meme.mp3";
+        </script>
+    </body>
 </html>
